fix: fix dark mode text color

--- a/src/style/theme/fkui.scss
+++ b/src/style/theme/fkui.scss
@@ -1,9 +1,17 @@
 /**
-    Re map Docs variables to FKUI theme variable
-    https://designsystem.forsakringskassan.se/latest/styles/colors.html
-*/
+   Re map Docs variables to FKUI theme variable
+   https://designsystem.forsakringskassan.se/latest/styles/colors.html
+ */
 :root {
-    --docs-color-text-primary: var(--fkds-color-text-primary);
+    // default
+    --docs-font-line-height: var(--f-line-height-large);
+    --docs-font-size: var(--f-font-size-default-rem);
+    --docs-text-color-default: var(--fkds-color-text-primary);
+
+    // header
     --docs-header-background-color: var(--fkds-color-background-primary);
     --docs-header-border-color: var(--fkds-color-border-weak);
+
+    // code
+    --docs-code-background-color: var(--f-background-code);
 }
